@@ -38,6 +38,7 @@ public class HServerInfo implements WritableComparable<HServerInfo> {
   private long startCode;
   private HServerLoad load;
   private int infoPort;
+  private String name;
 
   /** default constructor - used by Writable */
   public HServerInfo() {
@@ -114,6 +115,14 @@ public class HServerInfo implements WritableComparable<HServerInfo> {
   public void setStartCode(long startCode) {
     this.startCode = startCode;
   }
+  
+  public String getName() {
+    return name;
+  }
+  
+  public void setName(String name) {
+    this.name = name;
+  }
 
   @Override
   public String toString() {
@@ -131,6 +140,7 @@ public class HServerInfo implements WritableComparable<HServerInfo> {
     int result = this.serverAddress.hashCode();
     result ^= this.infoPort;
     result ^= this.startCode;
+    result ^= this.name.hashCode();
     return result;
   }
 
@@ -142,6 +152,7 @@ public class HServerInfo implements WritableComparable<HServerInfo> {
     this.startCode = in.readLong();
     this.load.readFields(in);
     this.infoPort = in.readInt();
+    this.name = in.readUTF();
   }
 
   public void write(DataOutput out) throws IOException {
@@ -149,6 +160,7 @@ public class HServerInfo implements WritableComparable<HServerInfo> {
     out.writeLong(this.startCode);
     this.load.write(out);
     out.writeInt(this.infoPort);
+    out.writeUTF(name);
   }
 
   public int compareTo(HServerInfo o) {
