@@ -21,6 +21,7 @@ Release 0.19.2 - Unreleased
    HBASE-1318  Thrift server doesnt know about atomicIncrement
                (Ryan Rawson via Stack)
    HBASE-1352  incrementColumnValue/Memcache bug
+   HBASE-1279  Fix the way hostnames and IPs are handled
 
 
 Release 0.19.1 - 03/19/2009
